# play-with-local-llama

./: .dockerignore  .gitignore  ADVANCED_TOPICS.md  README.md  TODO.md  first-chain.py  pyproject.toml  requirements.txt  task_manager.py  test-lama-model.py  test_llama.py  test_llama_functionaru-opneai.py  user_preferences.json  uvproject.toml
.devcontainer/: .dockerignore  Dockerfile
agentic-framworks/autogen/: model.py
agentic-framworks/googl-adk/: LEARNING_PATH.md
agentic-framworks/googl-adk/google_search_agent/: agent.py
agentic-framworks/langchain/: get_started.py
agents/: README.md  movie-recomandation.py  ollama_test.py  reminder-agent.py
agents/crawler_agent/: README.md  crawler_agent.drawio
agents/crawler_agent/crawler_agent/: items.py  middlewares.py  pipelines.py  settings.py
agents/crawler_agent/crawler_agent/spiders/: air_crawler.py  (+1 more)
agents/function_calling/: function_calling_with_llm.py  function_calling_with_llm_v2.py  function_specs.py  functions.py
agents/multi-agent/: README.md  multi-agent-strctured_out.py
agents/news-summary-agent/: README.md  REQUIREMENTS.md  articles.json  llama_utils.py  memory.py  news-summary-agent.py  retrieval.py  user_preferences.json
agents/planning_agent/: centralized_planning.py
agents/utils/: handle_stream_data.py
fine-tuning/: hf_guide_image_clacification_loRa.ipynb
mcp/: LEARNING-PATH.md  calculater_mcp_server.py
tokenizers/: explore_model.ipynb  helloworld_tokenizers.ipynb  multi_head_attention.ipynb  self_attention.ipynb  visualise_tokenization.py
transformers/: helloworld_tokenizers.ipynb
